# PCLA-wrapper

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  carla_server.sh  config_example.yaml  entrypoint.sh  justfile  pcla_config.yaml  pyproject.toml  requirements.txt
.github/workflows/: common-runtime.yml
PCLA-wrapper/: PCLA_agent.py  server.py
docker/: Dockerfile.bundled  nvidia_icd.json
docker/constraints/: python38.txt
docker/requirements/: common.txt  core.txt
docs/: README.md  agents.md  configuration.md  deployment.md  lifecycle.md  troubleshooting.md
pcla_wrapper/: agent_profiles.json  pcla_av.py  profiles.py
scripts/: download_pcla_pretrained.sh  prepare_weight_profile.py  smoke_common_agent.py  validate_common_runtime.py  validate_pcla_pretrained.py
tests/: test_smoke.py
