[project]
name = "pcla-wrapper"
version = "0.3.0"
description = "PISA AV service wrapper for PCLA agents"
readme = "README.md"
requires-python = ">=3.8,<3.11"
dependencies = [
    "pisa-api>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv.sources]
pisa-api = { git = "https://github.com/pisa-hut/pisa-api.git", rev = "709d811ee605ffe84f5a34de98710bca10dfd611" }

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = ["PCLA"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "UP045"]

[tool.pytest.ini_options]
testpaths = ["tests"]
